# aiballs_cxx

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: main.cpp.253C6DFF70C6C3C0.idx
scripts/: configure.sh
src/: game.cpp  game.hpp  main.cpp  scene.hpp
